--- a/style/all.css
+++ b/style/all.css
@@ -198,18 +198,32 @@ footer {
 
 .navi-ls {
     display: flex;
-    height: 100%;
+    /* height: 100%; */
     gap: var(--spacing-32);
 }
 
 .navi-item {
     display: flex;
     align-items: center;
+    line-height: 80px;
     height: 100%;
+}
+.navi-button {
+    display: none;
+}
+.navi-button-menu {
+    font-size: var(--text-size-md);
+}
+.navi-button-close {
+    display: none;
+    font-size: var(--text-size-md);
 }
 
 /* kv 主視覺 */
 .kv {
+    /* aspect-ratio: 16/9; */
+    /* width: 100%; */
+    /* height: auto; */
     height: calc(100vh - 80px);
     display: flex;
     justify-content: center;
@@ -750,14 +764,41 @@ footer::after {
     .navi {
         padding-left: var(--spacing-40);
         padding-right: var(--spacing-40);
-        justify-content: center;
+        justify-content: space-between;
     }
     .navi-ls {
-        display: none;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+        transform: translateY(100%);
+        background-color: var(--color-white);
+        box-shadow: 0 18px 12px -12px #0000001a inset;
+        overflow: hidden;
+        opacity: .75;
+        transition-duration: 300ms;
+    }
+    .navi-ls-show {
+        height: 240px;
+        padding-top: var(--spacing-40);
+        padding-bottom: var(--spacing-40);
+        opacity: 1;
+        transition-duration: 300ms;
+    }
+    .navi-item {
+        line-height: 1;
     }
     .navi-logo img {
         height: 24px;
         width: auto;
+    }
+    .navi-button {
+        display: block;
     }
     footer {
         justify-content: center;
