--- a/style/all.css
+++ b/style/all.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-
+@import url("https://font.emtech.cc/css/MiSansTC");
 
 /* || VARIABLE 變數 */
 :root {
@@ -82,7 +82,7 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "MiSansTC", Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
 }
 
